test/for/valid/for.lua
-- Numeric for loops (for i = start, finish, step)

-- Basic numeric for loop
for i = 1, 10 do
    s = "Counting"
end

-- Counting down
for i = 10, 1, -1 do
    s = "Countdown"
end

-- Nested for loops
for i = 1, 3 do
    for j = 1, 2 do
        s = "Nested loops"
    end
end