test/for/error/for-error-do.lua
-- Errore nella sintassi del ciclo for
-- do mancante
for i = 1, 10, 1
    print(i)
end